syntax = "proto3";

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

package hello.config;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "atframe/atapp_conf.proto";

message dtcoordsvr_cfg {
  google.protobuf.Duration lru_expired_duration = 1
      [(atframework.atapp.protocol.CONFIGURE) = { default_value: "60s" min_value: "1s" }];
  uint32 lru_max_cache_count = 2;

  google.protobuf.Duration transaction_default_timeout = 11
      [(atframework.atapp.protocol.CONFIGURE) = { default_value: "10s" min_value: "1s" }];
}
